# sec_etl

./: .gitignore  .gitmodules  README.md  _quarto.yml  api_etl_pg.sh  api_etl_v2.py  common_funcs.py  create_performance_expression.py  etl-new.qmd  etl.py  etl.qmd  etl_post_render.py  etl_processor.py  get_associations.py  kill-job.py  nlp_tokenizer.py  pyproject.toml  refresh_ncit_pg.py  requirements.dev.txt  requirements.txt  sec_poc_classifier.py  sec_poc_expression_generator.py  sec_poc_tokenizer.py
.posit/publish/: sec_etl-7J7R.toml  sec_etl-BD6A.toml  sec_etl-GEF6.toml  sec_etl_py-MUL5.toml
.posit/publish/deployments/: deployment-4E4C.toml  deployment-E36R.toml  deployment-KF78.toml  deployment-LNVV.toml
scripts/: all-create-table.sql  alter-trials-table-260118.sql  grant-select-to-sec_read.sql  quarto-1.4.557-linux-arm64.sh
