[project]
name = "sec-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas<3",
    "psycopg2-binary<3",
    "spacy<4",
    "sqlalchemy<3",
    "wget<4",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pip>=25.2",
    "posit-sdk>=0.6.0",
]
